# RLM-research

./: .env  README.md  agent_roles.md  architecture.md  pyproject.toml  recursion_ablation.csv  recursion_controller.md  requirements.txt  results.csv
scripts/: plot_baselines.py  plot_recursion_ablation.py  plot_table.py
src/: main.py
src/agents/: controller.py  critic.py  generator.py  refiner.py
src/baselines/: cot.py  react.py  single_pass.py
src/core/: llm.py  state.py
src/eval/: evaluator.py  metrics.py  run_eval.py  run_recursion_ablation.py
src/graph/: rlm_graph.py
